[package]
name = "zflow"
version = "0.1.12"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "Flow-based programming library"
keywords = ["fbp", "DAG", "flowbased", "low-code", "no-code", "visual-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zflow_graph = {path = "./zflow_graph"}
zflow_runtime = {path  ="./zflow_runtime"}

# [build-dependencies]
# lalrpop = { version = "0.20.0"}

[lib]
doctest = false

[workspace]

members = [
    "fbp",
    "zflow_graph",
    "zflow_editor",
    "zflow_runtime",
    "zflow_runtime/test_components/add_wasm"
]


