[workspace]
resolver = "2"
members = [
    "./crates/fbp",
    "./crates/zflow_graph",
    # "zflow_editor",
    "./crates/zflow_runtime",
    "./crates/zflow_plugin",
    # "./crates/zflow_js_runner",
    "./crates/test_components/add_wasm",
    "./crates/test_providers/maths_provider",
]
[workspace.dependencies]
extism-pdk = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.71"
log = "0.4"
foreach = "0.3.0"
nuid = "0.3.2"
beady = "0.6.0"
assert-json-diff = "2.0.2"
cast_trait_object = "0.1.3"
async-trait = "0.1.60"
regex-lexer = "0.2.0"
regex = "1.8.1"
fp_rust = {version = "0.3.5", features = ["for_futures"]}
rayon = "1.7.0"
futures = {version = "0.3.25", features = ["thread-pool"] }
futures-lite = "1.12.0"
simple_logger = "4.3.3"
base64 = "0.21.7"
is-url = "1.0.4"
tokio = {version="1", features=["full"]}
chrono = {version="0.4.34", default-features = false, features = ["clock"]}
tempdir = "0.3.7"
array_tool = "1.0.3"
dyn-clone = "1.0.11"
bincode = "1.3.3"
once_cell = "1.18.0"
bytes = "1.4.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json"] }
