[package]
name = "zflow_editor"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "FBP low-code graph editor"
keywords = ["fbp", "flowbased", "low-code", "no-code", "visual-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# [features]
# persistence = ["serde", "slotmap/serde", "smallvec/serde", "egui/persistence"]

[dependencies]
zflow_graph = {path = "../zflow_graph"}
zflow_runtime = {path = "../zflow_runtime"}
egui = {version = "0.21.0", features = ["persistence" ]}
egui_extras = {version="0.21.0", features = ["svg"]}
eframe = {version ="0.21.3", features = ["persistence", "wgpu"]}
catppuccin-egui = "2.0"
# egui_node_graph = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.10.0", features = ["serde"] }
slotmap = { version = "1.0", features = ["serde"] }
lazy_static = "1.4.0"
thiserror = "1.0"
debounce = "0.2.1"
url = "2.3.1"
reqwest = "0.11.18"
tokio = { version = "1.28.1", features = ["full"] }
[lib]
doctest = false


