[package]
name = "zflow_graph"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "Flow-based Programming Graph Specification"
keywords = ["fbp", "DAG", "flowbased", "low-code", "no-code", "visual-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
foreach = "0.3.0"
nuid = "0.3.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
beady = "0.6.0"
assert-json-diff = "2.0.2"
# may = "0.3.31"
cast_trait_object = "0.1.3"
async-trait = "0.1.60"