[package]
name = "zflow_runtime"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "ZFlow FBP Graph Runtime"
keywords = ["fbp", "flowbased", "low-code", "no-code", "visual-programming"]


[features]
default = ["runtimes","async", "experimental"]
runtimes = ["lua_runtime", "js_runtime", "wren_runtime"]
js_runtime  = ["dep:rquickjs"]
wren_runtime = ["dep:ruwren"]
lua_runtime = ["dep:rlua", "dep:rlua_serde"]
wasm_runtime = ["dep:wasmtime", "dep:extism"]
go_runtime = ["dep:go-vm", "dep:go-engine", "dep:go-pmacro"]
experimental = ["wasm_runtime", "go_runtime"]
async = []

[dependencies]
zflow_graph = {path = "../zflow_graph"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
cast_trait_object = "0.1.3"
foreach = "0.3.0"
fp_rust = {version = "0.3.5", features = ["for_futures"]}
rayon = "1.7.0"
futures = {version = "0.3.25", features = ["thread-pool"] }
futures-util = "0.2.1"
futures-lite = "1.12.0"
assert-json-diff = "2.0.2"
beady = "0.6.0"
regex = "1.7.1"
log = "0.4"
env_logger = "0.10.0"
poll-promise = {git="https://github.com/EmbarkStudios/poll-promise", version="0.2.0"}
array_tool = "1.0.3"
dyn-clone = "1.0.11"
is-url = "1.0.4"
extism = {version="0.5.0", optional = true}
wasmtime = {version="10.0.0", optional = true}
anyhow = "1.0.71"
bincode = "1.3.3"
rquickjs = {version = "0.1.7", features = ["full"], optional = true}
rlua = {version ="0.19.7", optional = true}
once_cell = "1.18.0"
rlua_serde = {git="https://github.com/darmie/rlua_serde", branch="master", optional = true}
ruwren = {git="https://github.com/darmie/ruwren", optional = true}
go-engine = {git="https://github.com/darmie/goscript", branch="master", features=["read_zip", "async"], optional = true}
go-vm = {git="https://github.com/darmie/goscript", branch="master", features=["async"], optional = true}
go-pmacro = {git="https://github.com/darmie/goscript", branch="master", optional = true}
base64 = "0.21.3"
borsh = "0.10.3"
zip = { version = "0.6.2", features = ["deflate"], default-features = false }

[lib]
doctest = false

