[package]
name = "zflow_runtime"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "ZFlow FBP Graph Runtime"
keywords = ["fbp", "flowbased", "low-code", "no-code", "visual-programming"]

[features]
# default = ["plugin_host", "plugin_only"]
# plugin_only = ["dep:extism-pdk"]
# plugin_host = ["dep:extism", "dep:deno_core"]

[dependencies]
zflow_graph = {path = "../zflow_graph"}
zflow_plugin = {path = "../zflow_plugin"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
cast_trait_object = "0.1.3"
foreach = "0.3.0"
fp_rust = {version = "0.3.5", features = ["for_futures"]}
rayon = "1.7.0"
futures = {version = "0.3.25", features = ["thread-pool"] }
futures-util = "0.2.1"
futures-lite = "1.12.0"
assert-json-diff = "2.0.2"
beady = "0.6.0"
regex = "1.7.1"
log = "0.4"
env_logger = "0.10.0"
poll-promise = {git="https://github.com/EmbarkStudios/poll-promise", version="0.2.0"}
array_tool = "1.0.3"
dyn-clone = "1.0.11"
is-url = "1.0.4"
# wasmtime = {version="10.0.0", optional = true}
anyhow = "1.0.71"
bincode = "1.3.3"
# rquickjs = {version = "0.1.7", features = ["full"], optional = true}
# rlua = {version ="0.19.7", optional = true}
once_cell = "1.18.0"
# rlua_serde = {git="https://github.com/darmie/rlua_serde", branch="master", optional = true}
# ruwren = {git="https://github.com/darmie/ruwren", branch="fix-map-count", optional = true}
# go-engine = {version="0.1.4", features=["read_zip", "async"], optional = true}
# go-vm = {version="0.1.4", features=["async"], optional = true}
# go-pmacro = {version="0.1.4", optional = true}
borsh = "0.10.3"
zip = { version = "0.6.2", features = ["deflate"], default-features = false }
libloading = "0.8.1"
jwalk = "0.8.1"
extism-pdk = {version="1.0.0"}
extism = {version="1.0.0"}
deno_core = {version="0.255.0"}
simple_logger = "4.3.3"
deno_ast = {version="1.0.1", features = ["transpiling"]}
v8 = { version = "0.83.1", default-features = false }
serde_v8 = "0.164.0"
mini-v8 = "0.4.1"
base64 = "0.21.7"

[lib]
doctest = false

[build-dependencies]
deno_core = {version="0.255.0"}

