[package]
name = "zflow_runtime"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "ZFlow FBP Graph Runtime"
keywords = ["fbp", "flowbased", "low-code", "no-code", "visual-programming"]

[features]
default = ["host_only"]
host_only = ["dep:extism", "dep:extism-pdk", "dep:deno_core", "dep:libloading", "dep:deno_ast", "dep:serde_v8", "dep:v8"]

[dependencies]
zflow_graph = {path = "../zflow_graph"}
zflow_plugin = {path = "../zflow_plugin"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
foreach = "0.3.0"
fp_rust = {version = "0.3.5", features = ["for_futures"]}
rayon = "1.7.0"
futures = {version = "0.3.25", features = ["thread-pool"] }
futures-lite = "1.12.0"
assert-json-diff = "2.0.2"
regex = "1.7.1"
log = "0.4"
array_tool = "1.0.3"
dyn-clone = "1.0.11"
anyhow = "1.0.71"
bincode = "1.3.3"
once_cell = "1.18.0"
libloading = {version = "0.8.1", optional = true}
jwalk = "0.8.1"
extism-pdk = {version="1.0.0", optional = true }
extism = {version="1.0.0", optional = true }
deno_core = {version="0.255.0", optional = true}
simple_logger = "4.3.3"
deno_ast = {version="1.0.1", features = ["transpiling"], optional = true }
v8 = { version = "0.83.1", default-features = false, optional = true }
serde_v8 = {version = "0.164.0", optional = true}
base64 = "0.21.7"
reqwest = "0.11.23"
is-url = "1.0.4"
tokio = {version="1", features=["full"]}

[patch.crates-io]
hyper= {version="1.1.0", features=["full"]}

[dev-dependencies]
beady = "0.6.0"

[lib]
doctest = false


