[package]
name = "fbp"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/zflow-dev/zflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-lexer= {workspace = true} 
regex= {workspace = true} 
serde_json= {workspace = true} 
serde= {workspace = true} 

[lib]
path = "lib.rs"
