[package]
name = "zflow_editor"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "FBP low-code graph editor"
keywords = ["fbp", "flowbased", "low-code", "no-code", "visual-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zflow = {path = "../"}
egui = "0.21.0"
eframe = "0.21.3"
catppuccin-egui = "2.0"
# egui_node_graph = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
doctest = false