[package]
name = "zflow_graph"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "Flow-based Programming Graph Specification"
keywords = ["fbp", "DAG", "flowbased", "low-code", "no-code", "visual-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log= {workspace = true}
foreach= {workspace = true}
nuid= {workspace = true}
serde_json= {workspace = true}
serde= {workspace = true}
beady= {workspace = true}
assert-json-diff= {workspace = true}
cast_trait_object= {workspace = true}
async-trait= {workspace = true}
fbp = {path = '../fbp'}
anyhow={workspace=true}

[lib]
path = "lib.rs"
doctest = false