[package]
name = "zflow_plugin"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "ZFlow FBP Graph Runtime"
keywords = ["fbp", "flowbased", "low-code", "no-code", "visual-programming"]

[dependencies]
extism-pdk = {workspace = true}
serde_json= {workspace = true}
serde= {workspace = true}

# [lib]
# path = "src/lib.rs"