[package]
name = "zflow_runtime"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "ZFlow FBP Graph Runtime"
keywords = ["fbp", "flowbased", "low-code", "no-code", "visual-programming"]

[lib]
doctest = false
path = "lib.rs"

[features]
default = ["host_only"]
host_only = [
    "dep:libloading", 
    "deno_embed",
    "wasm_native_runtime",
    "jsonrpc"
]

jsonrpc = [
    "dep:rust_socketio"
]

wasm_native_runtime = [
 "dep:extism", 
 "dep:extism-pdk", 
]
deno_embed = [
    "dep:deno_ast",
    "dep:deno_core",
    "dep:deno_runtime",
    "dep:denokv_proto",
    "dep:denokv_remote",
    "dep:denokv_sqlite",
    "dep:deno_broadcast_channel",
    "dep:deno_cache",
    "dep:deno_canvas",
    "dep:deno_console",
    "dep:deno_cron",
    "dep:deno_crypto",
    "dep:deno_fetch",
    "dep:deno_ffi",
    "dep:deno_fs",
    "dep:deno_http",
    "dep:deno_io",
    "dep:deno_kv",
    "dep:deno_napi",
    "dep:deno_tls",
    "dep:deno_url",
    "dep:deno_web",
    "dep:deno_webgpu",
    "dep:deno_webidl",
    "dep:deno_websocket",
    "dep:deno_webstorage",
    "dep:deno_net",
    "dep:deno_node"
]

[dependencies]
zflow_graph = {path = "../zflow_graph"}
zflow_plugin = {path = "../zflow_plugin"}
serde_json= {workspace = true}
serde= {workspace = true}
foreach= {workspace = true}
fp_rust= {workspace = true}
rayon= {workspace = true}
futures= {workspace = true}
futures-lite= {workspace = true}
assert-json-diff= {workspace = true}
regex= {workspace = true}
log= {workspace = true}
array_tool= {workspace = true}
dyn-clone= {workspace = true}
anyhow = {workspace = true}
bincode= {workspace = true}
once_cell = "1.18.0"
libloading = {version = "0.8.1", optional = true}
jwalk = "0.8.1"
extism-pdk= {workspace = true,  optional = true}
extism = {version="1.0.0", optional = true }
simple_logger= {workspace = true}
base64= {workspace = true}
reqwest= {workspace = true}
is-url= {workspace = true}
tokio= {workspace = true}
chrono= {workspace = true}
tempdir= {workspace = true}

rust_socketio = { version = "*", optional=true}

deno_ast = { version = "0.34.1", features = ["transpiling"], optional=true }
deno_core = { version = "0.270.0", features = ["lazy_eval_snapshot"], optional=true }

deno_lockfile = "0.19.0"
deno_media_type = { version = "0.1.1", features = ["module_specifier"], optional=true }
deno_permissions = { version = "0.2.0", optional=true }
deno_runtime = { version = "0.150.0", optional=true }

denokv_proto = {version = "0.5.0", optional=true}
denokv_remote = {version = "0.5.0", optional=true}
# denokv_sqlite brings in bundled sqlite if we don't disable the default features
denokv_sqlite = { default-features = false, version = "0.5.0", optional=true }

# exts
deno_broadcast_channel = { version = "0.136.0", optional=true }
deno_cache = { version = "0.74.0", optional=true }
deno_canvas = { version = "0.11.0", optional=true }
deno_console = { version = "0.142.0", optional=true }
deno_cron = { version = "0.22.0", optional=true }
deno_crypto = { version = "0.156.0", optional=true }
deno_fetch = { version = "0.166.0", optional=true }
deno_ffi = { version = "0.129.0", optional=true }
deno_fs = { version = "0.52.0", optional=true }
deno_http = { version = "0.139.0", optional=true }
deno_io = { version = "0.52.0", optional=true }
deno_kv = { version = "0.50.0", optional=true }
deno_napi = { version = "0.72.0", optional=true }
deno_net = { version = "0.134.0", optional=true }
deno_node = { version = "0.79.0", optional=true }
deno_tls = { version = "0.129.0", optional=true }
deno_url = { version = "0.142.0", optional=true }
deno_web = { version = "0.173.0", optional=true }
deno_webgpu = { version = "0.109.0", optional=true}
deno_webidl = { version = "0.142.0", optional=true }
deno_websocket = { version = "0.147.0", optional=true }
deno_webstorage = { version = "0.137.0", optional=true }


[dev-dependencies]
beady = "0.6.0"



[build-dependencies]
deno_runtime = {version = "0.150.0"}




