[package]
name = "maths_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk= {workspace = true}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zflow_plugin = {path= "../../crates/zflow_plugin"}

[lib]
crate_type = ["cdylib"]
path = "lib.rs"