[package]
name = "maths_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zflow_plugin = {path= "../../../zflow_plugin"}

[lib]
crate_type = ["cdylib"]